--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+crossterm = "0.28.1"
 ratatui = "0.29.0"
 serde = { version = "1.0.213", features = ["derive"] }
 serde_json = "1.0.132"
